--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "parcel-reporter-static-files-copy": "^1.5.0"
   },
   "dependencies": {
+    "@parcel/transformer-inline-string": "^2.8.3",
     "handlebars": "^4.7.7"
   },
-  "engines" : {
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=18.0.0"
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=18.0.0"
   }
 }
