--- a/package.json
+++ b/package.json
@@ -12,14 +12,9 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "express": "^4.18.2",
-    "parcel": "^2.8.3",
-    "parcel-reporter-static-files-copy": "^1.5.0"
+    "parcel": "^2.8.3"
   },
   "dependencies": {
     "handlebars": "^4.7.7"
-  },
-  "engines" : {
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=18.0.0"
   }
 }
