--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "express": "^4.18.2",
-    "parcel": "^2.8.3"
+    "parcel": "^2.8.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@parcel/transformer-inline-string": "^2.8.3",
