--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Chat for messaging",
   "scripts": {
+    "stylelint":"npx stylelint \"**/*.scss\"  --fix",
+    "eslint":"npx eslint --fix",    
     "dev": "parcel ./static/index.html",
     "build": "parcel build ./static/index.html",
     "start": "npm run build && node ./server.js"
@@ -11,8 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "parcel": "^2.8.3",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
