--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,13 @@
     "target": "es2016",
     "declaration": false,
     "module": "commonjs",
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "sourceMap": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "esModuleInterop": true, 
+    "lib": ["DOM","DOM.Iterable"]
+    
    }
 } 
