--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,9 @@
 {
     "extends": ["stylelint-config-standard","stylelint-config-standard-scss"],
+    
     "rules": {
-      },
+      "selector-class-pattern": null
+    },
     "ignoreFiles": [
       "dist/*"
     ]
