--- a/package.json
+++ b/package.json
@@ -2,27 +2,50 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "Chat for messaging",
+  "private": true,
   "scripts": {
     "stylelint": "npx stylelint \"**/*.{scss,css}\"",
     "eslint": "npx eslint",
-    "dev": "parcel ./static/index.html",
-    "build": "parcel build ./static/index.html",
+    "dev-parcel": "parcel ./static/index.html",
+    "build-parcel": "parcel build ./static/index.html",
+    "build": "npx webpack --mode production",
+    "dev": "npx webpack serve --mode=development --progress",
     "start": "npm run build && node ./server.js"
   },
   "author": "Ruslan Belyi",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.16.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "chai": "^4.3.7",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
+    "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.7.5",
+    "mocha": "^10.2.0",
+    "node-sass": "^8.0.0",
     "parcel": "^2.8.3",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "stylelint": "^15.3.0",
     "stylelint-config-standard-scss": "^7.0.1",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "^4.9.5",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@parcel/transformer-inline-string": "^2.8.3",
