--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "build-parcel": "parcel build ./static/index.html",
     "build": "npx webpack --mode production",
     "dev": "npx webpack serve --mode=development --progress",
-    "start": "npm run build && node ./server.js"
+    "start": "npm run build && node ./server.js",
+    "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'"
   },
   "author": "Ruslan Belyi",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
-    "@types/chai": "^4.3.4",
+    "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.1",
+    "@types/sinon": "^10.0.14",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "chai": "^4.3.7",
@@ -30,11 +32,13 @@
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "jsdom": "^21.1.1",
     "mini-css-extract-plugin": "^2.7.5",
     "mocha": "^10.2.0",
     "node-sass": "^8.0.0",
     "parcel": "^2.8.3",
     "sass-loader": "^13.2.2",
+    "sinon": "^15.0.4",
     "style-loader": "^3.3.2",
     "stylelint": "^15.3.0",
     "stylelint-config-standard-scss": "^7.0.1",
