--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Chat for messaging",
   "private": true,
+  "author": "Ruslan Belyi",
+  "license": "ISC",
   "scripts": {
     "stylelint": "npx stylelint \"**/*.{scss,css}\"",
     "eslint": "npx eslint",
@@ -13,8 +15,11 @@
     "start": "npm run build && node ./server.js",
     "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'"
   },
-  "author": "Ruslan Belyi",
-  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run eslint && npm run stylelint"
+    }
+  },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "@types/chai": "^4.3.5",
@@ -32,6 +37,7 @@
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "husky": "^8.0.3",
     "jsdom": "^21.1.1",
     "mini-css-extract-plugin": "^2.7.5",
     "mocha": "^10.2.0",
