--- a/package.json
+++ b/package.json
@@ -15,11 +15,6 @@
     "start": "npm run build && node ./server.js",
     "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run eslint && npm run stylelint"
-    }
-  },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "@types/chai": "^4.3.5",
@@ -42,6 +37,7 @@
     "mini-css-extract-plugin": "^2.7.5",
     "mocha": "^10.2.0",
     "node-sass": "^8.0.0",
+    "npm-run-all": "^4.1.5",
     "parcel": "^2.8.3",
     "sass-loader": "^13.2.2",
     "sinon": "^15.0.4",
